[gd_scene load_steps=9 format=2]

[ext_resource path="res://Managers/CharacterManager.gd" type="Script" id=1]
[ext_resource path="res://Managers/ClientActionManager.gd" type="Script" id=2]
[ext_resource path="res://Managers/GameManager.gd" type="Script" id=3]
[ext_resource path="res://Shared/Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Managers/ClientGhostManager.gd" type="Script" id=5]
[ext_resource path="res://Shared/RoundManager.gd" type="Script" id=6]
[ext_resource path="res://Level/CapturePoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shared/Level/LevelH.tscn" type="PackedScene" id=8]

[node name="TutorialWorld" type="Node"]

[node name="CharacterManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="RoundManager" type="Node" parent="CharacterManager"]
script = ExtResource( 6 )

[node name="ActionManager" type="Node" parent="CharacterManager"]
script = ExtResource( 2 )

[node name="GameManager" type="Node" parent="CharacterManager"]
script = ExtResource( 3 )

[node name="GhostManager" type="Node" parent="CharacterManager"]
script = ExtResource( 5 )

[node name="LevelH" type="Spatial" parent="." instance=ExtResource( 8 )]
script = ExtResource( 4 )
capture_point_scene = ExtResource( 7 )
